<resources>
    <string name="app_name">MKS</string>
    <string name="home_text">Home</string>
    <string name="email_text">Email</string>
    <string name="name_text">Name</string>
    <string name="joining_text">Joining</string>
    <string name="aadhaar_text">Aadhaar</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="incentive">Incentive</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="download_text">Download</string>
    <string name="no_data_text">No Data Available!</string>
    <string name="login_back_text">Go Back To Login</string>
    <string name="create_email_text">Create Email for Employee</string>
    <string name="attendance_text">My Attendance</string>
    <string name="salary_text">My Salary</string>
    <string name="company_name">MKS Enterprises</string>
    <string name="company_name2">MKS \n Enterprises</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_empty_fields">Empty Fields!</string>
    <string name="error_not_found">Not Found!</string>
    <string name="success_msg">Success!</string>
    <string name="failed_msg">Failed</string>

</resources>