<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home_fragment">
    <fragment
        android:id="@+id/home_fragment"
        android:name="e.hr.mks.home.home_fragment"
        android:label="@string/company_name"
        tools:layout="@layout/fragment_home_fragment" />
    <fragment
        android:id="@+id/attendance_fragment"
        android:name="e.hr.mks.attendance.attendance_fragment"
        android:label="@string/attendance_text"
        tools:layout="@layout/fragment_attendance_fragment" />
    <fragment
        android:id="@+id/salary_fragment"
        android:name="e.hr.mks.salary.view.SalaryFragment"
        android:label="@string/salary_text"
        tools:layout="@layout/fragment_salary" />
</navigation>