<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="e.hr.mks.auth.view.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="250dp"
            android:src="@drawable/img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="250dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_id_layout"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_img"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/email_text"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edittext"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/email_id_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/password_text"
            app:passwordToggleEnabled="true"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edittext"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:text="@string/signup_text"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_text"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:text="@string/login_back_text"
            android:textColor="#1131D1"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>