<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".salary.view.SalaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_salary_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_date_layout"
            android:layout_width="match_parent"
            android:spinnerMode="dropdown"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="@drawable/gradient_spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:id="@+id/details_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/black"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/name_text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:paddingLeft="10dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/email_text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:paddingLeft="10dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/joining_text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/joining_date_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:paddingLeft="10dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/aadhaar_text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/adhaar_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:paddingLeft="10dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/salary_layout"
            app:layout_constraintTop_toBottomOf="@+id/details_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@android:color/black"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/basic_salary"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/basic_salary_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:paddingLeft="10dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:maxLines="1"
                    android:background="@color/white"
                    android:paddingLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/incentive"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/incentive_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:paddingLeft="10dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />
            </TableRow>

        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_btn"
            app:layout_constraintTop_toBottomOf="@id/salary_layout"
            app:layout_constraintLeft_toLeftOf="@id/salary_layout"
            app:layout_constraintRight_toRightOf="@id/salary_layout"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:text="@string/download_text"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/no_data_text"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_data_text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>